--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Install test dependencies
       run: |
-        pip install requirements.txt
+        pip install -r requirements.txt
 
     - name: Run tests
       run: |
