--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -16,6 +16,7 @@ jobs:
 
     env:
       GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
+      GH_PWD: ${{ secrets.GH_PWD }}
       DBX_AZURE_HOST: ${{ secrets.DBX_AZURE_HOST }}
       DBX_AZURE_TOKEN:  ${{ secrets.DBX_AZURE_TOKEN }}
 
