add logic for release workflow testing

--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -2,8 +2,10 @@ name: test
 
 on:
   push:
-    branches-ignore:
-      - master
+    branches:
+      - '**'
+    tags-ignore:
+      - '*.*'
 
 jobs:
   test:
