--- a/{{cookiecutter.project_slug}}/.github/workflows/onpush.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/onpush.yml
@@ -1,6 +1,11 @@
 name: Test pipeline
 
-on: [ push ]
+on:
+  push:
+    branches:
+      - '**'
+    tags-ignore:
+      - 'v*' # this tag type is used for release pipelines
 
 jobs:
   test-pipeline:
