--- a/{{cookiecutter.project_slug}}/.github/workflows/onrelease.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/onrelease.yml
@@ -1,9 +1,10 @@
 name: Release pipeline
 
 on:
-  release:
-    types:
-      - created
+  push:
+    tags:
+      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+
 
 jobs:
   release-pipeline:
@@ -25,15 +26,6 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.7
-
-      - uses: actions/cache@v2
-        id: cache
-        with:
-          path: ~/.cache/pip
-          key: ${{{{ runner.os }}}}-pip-${{{{ hashFiles('**/unit-requirements.txt') }}}}
-          restore-keys: |
-            ${{{{ runner.os }}}}-pip-${{{{ hashFiles('**/unit-requirements.txt') }}}}
-            ${{{{ runner.os }}}}-pip-
 
       - name: Install pip
         run: |
@@ -68,5 +60,16 @@ jobs:
         run: |
           dbx deploy --jobs={project_name}-sample
 
-
+      - name: create release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{{{ secrets.GITHUB_TOKEN }}}} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: ${{{{ github.ref }}}}
+          release_name: Release ${{{{ github.ref }}}}
+          body: |
+            Release for version ${{{{ github.ref }}}}
+          draft: false
+          prerelease: false
 
