--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -18,12 +18,6 @@ jobs:
       matrix:
         python-version: [3.7.5]
 
-    env:
-      GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
-      GH_PWD: ${{ secrets.GH_PWD }}
-      DBX_AZURE_HOST: ${{ secrets.DBX_AZURE_HOST }}
-      DBX_AZURE_TOKEN:  ${{ secrets.DBX_AZURE_TOKEN }}
-
     steps:
     - uses: actions/checkout@v1
 
@@ -31,12 +25,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-
-    - name: Prepare profile
-      run: |
-        echo "[dbx-dev-azure]" >> ~/.databrickscfg
-        echo "host = $DBX_AZURE_HOST" >> ~/.databrickscfg
-        echo "token = $DBX_AZURE_TOKEN" >> ~/.databrickscfg
 
     - name: Install pip
       run: |
@@ -46,52 +34,52 @@ jobs:
       run: |
         pip install -r requirements.txt
 
-    - name: Run tests
-      run: |
-        pytest tests/test_e2e_azure_github_actions.py
+#    - name: Run tests
+#      run: |
+#        pytest tests/test_e2e_azure_github_actions.py
 
 
 
-  test-e2e-local:
-
-    runs-on: ${{ matrix.os }}
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.7.5]
-        os: [ubuntu-latest, windows-latest]
-
-    env:
-      GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
-      GH_PWD: ${{ secrets.GH_PWD }}
-      DBX_AZURE_HOST: ${{ secrets.DBX_AZURE_HOST }}
-      DBX_AZURE_TOKEN:  ${{ secrets.DBX_AZURE_TOKEN }}
-
-    steps:
-    - uses: actions/checkout@v1
-
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install pip
-      run: |
-        python -m pip install --upgrade pip
-
-    - name: Install test dependencies
-      run: |
-        pip install -r requirements.txt
-
-    - name: Prepare profile on Linux
-      if: matrix.os == 'ubuntu-latest'
-      run: |
-        python utils/profile_creator.py --profile=dbx-dev-azure --host=$DBX_AZURE_HOST --token=$DBX_AZURE_TOKEN
-
-    - name: Prepare profile on Windows
-      if: matrix.os == 'windows-latest'
-      run: |
-        python utils/profile_creator.py --profile=dbx-dev-azure --host=${env:DBX_AZURE_HOST} --token=${env:DBX_AZURE_TOKEN}
-
-    - name: Run tests
-      run: |
-        pytest tests/test_e2e_local.py
+#  test-e2e-local:
+#
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#      max-parallel: 4
+#      matrix:
+#        python-version: [3.7.5]
+#        os: [ubuntu-latest, windows-latest]
+#
+#    env:
+#      GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
+#      GH_PWD: ${{ secrets.GH_PWD }}
+#      DBX_AZURE_HOST: ${{ secrets.DBX_AZURE_HOST }}
+#      DBX_AZURE_TOKEN:  ${{ secrets.DBX_AZURE_TOKEN }}
+#
+#    steps:
+#    - uses: actions/checkout@v1
+#
+#    - name: Set up Python ${{ matrix.python-version }}
+#      uses: actions/setup-python@v2
+#      with:
+#        python-version: ${{ matrix.python-version }}
+#    - name: Install pip
+#      run: |
+#        python -m pip install --upgrade pip
+#
+#    - name: Install test dependencies
+#      run: |
+#        pip install -r requirements.txt
+#
+#    - name: Prepare profile on Linux
+#      if: matrix.os == 'ubuntu-latest'
+#      run: |
+#        python utils/profile_creator.py --profile=dbx-dev-azure --host=$DBX_AZURE_HOST --token=$DBX_AZURE_TOKEN
+#
+#    - name: Prepare profile on Windows
+#      if: matrix.os == 'windows-latest'
+#      run: |
+#        python utils/profile_creator.py --profile=dbx-dev-azure --host=${env:DBX_AZURE_HOST} --token=${env:DBX_AZURE_TOKEN}
+#
+#    - name: Run tests
+#      run: |
+#        pytest tests/test_e2e_local.py
