remove whl package and all it's references

--- a/{{cookiecutter.project_slug}}/.github/workflows/onpush.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/onpush.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r unit-requirements.txt
-          pip install -U tools/dbx-0.7.0-py3-none-any.whl
+          pip install dbx
           pip install -e .
 
       - name: Run unit tests
