--- a/{{cookiecutter.project_slug}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_slug}}/.gitlab-ci.yml
@@ -11,7 +11,7 @@ unit-testing:
     - apt-get update
     - apt-get install default-jdk -y
     - pip install -r unit-requirements.txt
-    - pip install -U tools/dbx-0.7.0-py3-none-any.whl
+    - pip install dbx
     - pip install -e .
     - echo "Launching unit tests"
     - pytest tests/unit
@@ -22,7 +22,7 @@ integration-testing:
   script:
     - echo "Install dependencies"
     - pip install -r unit-requirements.txt
-    - pip install -U tools/dbx-0.7.0-py3-none-any.whl
+    - pip install dbx
     - pip install -e .
     - echo "Preparing profile"
     - echo "[{{cookiecutter.profile}}]" >> ~/.databrickscfg
@@ -42,7 +42,7 @@ deployment:
   script:
     - echo "Install dependencies"
     - pip install -r unit-requirements.txt
-    - pip install -U tools/dbx-0.7.0-py3-none-any.whl
+    - pip install dbx
     - pip install -e .
     - echo "Preparing profile"
     - echo "[{{cookiecutter.profile}}]" >> ~/.databrickscfg
