--- a/{{cookiecutter.project_name}}/.github/workflows/onpush.yml
+++ b/{{cookiecutter.project_name}}/.github/workflows/onpush.yml
@@ -30,10 +30,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
 
-      - name: Install dependencies
+      - name: Install dependencies and project in dev mode
         run: |
           pip install -r unit-requirements.txt
-          pip install dbx
           pip install -e .
 
       - name: Run unit tests
@@ -41,19 +40,13 @@ jobs:
           echo "Launching unit tests"
           pytest tests/unit
 
-      - name: Prepare profile
-        run: |
-          echo "[{profile}]" >> ~/.databrickscfg
-          echo "host = $DATABRICKS_HOST" >> ~/.databrickscfg
-          echo "token = $DATABRICKS_TOKEN" >> ~/.databrickscfg
-
       - name: Deploy integration test
         run: |
-          dbx deploy --jobs={project_name}-sample-integration-test
+          dbx deploy --jobs={project_name}-sample-integration-test --files-only
 
       - name: Run integration test
         run: |
-          dbx launch --job={project_name}-sample-integration-test --trace
+          dbx launch --job={project_name}-sample-integration-test --as-run-submit --trace
 
 
 
