--- a/{{cookiecutter.project_name}}/.github/workflows/onrelease.yml
+++ b/{{cookiecutter.project_name}}/.github/workflows/onrelease.yml
@@ -31,33 +31,25 @@ jobs:
         run: |
           python -m pip install --upgrade pip
 
-      - name: Install dependencies
+      - name: Install dependencies and project in dev mode
         run: |
           pip install -r unit-requirements.txt
-          pip install dbx
-          pip install -e .
-
-      - name: Run unit tests
-        run: |
-          echo "Launching unit tests"
-          pytest tests/unit
-
-      - name: Prepare profile
-        run: |
-          echo "[{profile}]" >> ~/.databrickscfg
-          echo "host = $DATABRICKS_HOST" >> ~/.databrickscfg
-          echo "token = $DATABRICKS_TOKEN" >> ~/.databrickscfg
-
-      - name: Deploy integration test
-        run: |
-          dbx deploy --jobs={project_name}-sample-integration-test
-
-      - name: Run integration test
-        run: |
-          dbx launch --job={project_name}-sample-integration-test --trace
 
       - name: Deploy the job
         run: |
           dbx deploy --jobs={project_name}-sample
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{{{ secrets.GITHUB_TOKEN }}}} # This token is provided by Actions
+        with:
+          tag_name: ${{{{ github.ref }}}}
+          release_name: Release ${{{{ github.ref }}}}
+          body: |
+            Release for version ${{{{ github.ref }}}}.
+          draft: false
+          prerelease: false
 
 
